--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ inflection==0.5.1
 jsonschema==4.17.3
 lxml==5.2.1
 mysqlclient==2.1.1
-numpy==1.21.6
+# numpy==1.21.6
 olefile==0.47
 packaging==24.0
 pandas==1.3.5
