--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ mysqlclient==2.1.1
 # numpy==1.21.6
 olefile==0.47
 packaging==24.0
-pandas==1.3.5
+# pandas==1.3.5
 pdfminer.six==20191110
 Pillow==9.5.0
 pkgutil_resolve_name==1.3.10
