--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 argcomplete==1.10.3
 asgiref==3.7.2
 attrs==23.2.0
-backports.zoneinfo==0.2.1
+# backports.zoneinfo==0.2.1
 beautifulsoup4==4.8.2
 Brotli==1.1.0
 chardet==3.0.4
