--- a/requirements.txt
+++ b/requirements.txt
@@ -59,3 +59,9 @@ whitenoise==6.5.0
 xlrd==1.2.0
 XlsxWriter==3.2.0
 zipp==3.15.0
+google-api-core==2.19.0
+google-api-python-client==2.128.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.0
